--- a/clone-coding/youtube/YouTube.html
+++ b/clone-coding/youtube/YouTube.html
@@ -16,10 +16,9 @@
 				<li><a href=""><i class="fas fa-ellipsis-v"></i></a></li>
 			</ul>
 		</nav>
-		<video autoplay controls muted>
-			<source src="src/video1(convert).mp4" type="video/mp4">
-			지원하지 않는 브라우저입니다.
-		</video>
+		<div class=video>
+			<iframe src="https://www.youtube.com/embed/67stn7Pu7s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 		<div class="title-area">
 			<div class="hashtag">
 				<a href="">#해시태그</a>
