--- a/clone-coding/youtube/YouTube.html
+++ b/clone-coding/youtube/YouTube.html
@@ -6,106 +6,146 @@
 		<meta name="viewport" content="width:device-width">
 		<link rel="stylesheet" href="YouTube.css">
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css' integrity='sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==' crossorigin='anonymous'/>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Noto+Sans+KR&display=swap" rel="stylesheet">
 		<script src="YouTube.js" defer></script>
 		<title>YouTube</title>
 	</head>
 	<body>
-		<nav>
+		<!-- 헤더 -->
+		<header>
 			<a href=""><img src="src/yt_logo_rgb_dark.png" alt="YouTube 홈" class="logo"></a>
 			<ul>
 				<li><a href=""><i class="fas fa-search"></i></a></li>
 				<li><a href=""><i class="fas fa-ellipsis-v"></i></a></li>
 			</ul>
-		</nav>
-		<div class=video>
+		</header>
+		<!-- 영상 -->
+		<section class=video-section>
 			<iframe src="https://www.youtube.com/embed/67stn7Pu7s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-		<div class="title-area">
-			<div class="hashtag">
-				<a href="#">#해시태그</a>
-			</div>
-			<div class="title">
-				<span>영상 제목</span>
-				<a href="#"><i class="fas fa-chevron-down" id="open-title"></i></a>
-			</div>
-			<div class="view">조회수 123만회</div>
-		</div>
-		<ul class="video-buttons">
-			<li><a href="#"><i class="fas fa-thumbs-up"></i><div>1.2천</div></a></li>
-			<li><a href="#"><i class="fas fa-thumbs-down"></i><div>123</div></a></li>
-			<li><a href="#"><i class="fas fa-share"></i><div>공유</div></a></li>
-			<li><a href="#"><i class="fas fa-plus-square"></i><div>저장</div></a></li>
-			<li><a href="#"><i class="fas fa-flag"></i><div>신고</div></a></li>
-		</ul>
-		<div class="channel-area">
-			<a href="" class="channel">
-				<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
-				<div class="channel-info">
-					<div class="channel-title">한땀한땀 SEW CODING</div>
-					<div class="channel-subscriber">구독자 123만명</div>
+		</section>
+		<!-- 영상 정보 -->
+		<section class="info-section">
+			<div class="title-area">
+				<div class="hashtag">
+					<a href="#">#해시태그</a>
 				</div>
-			</a>
-			<button class="channel-subscribe">구독</button>
-		</div>
-		<div class="comments-close">
-			<a href="#" class="open-comments">
+				<a href="#" class="open-title">
+					<div>
+						<div class="title">영상 제목</div>
+						<div class="view">조회수 123만회</div>
+					</div>
+					<i class="fas fa-chevron-down" id="down"></i>
+					<i class="fas fa-chevron-up" id="up"></i>
+				</a>
+			</div>
+			<ul class="video-buttons">
+				<li><a href="#"><i class="fas fa-thumbs-up"></i><div>1.2천</div></a></li>
+				<li><a href="#"><i class="fas fa-thumbs-down"></i><div>123</div></a></li>
+				<li><a href="#"><i class="fas fa-share"></i><div>공유</div></a></li>
+				<li><a href="#"><i class="fas fa-plus-square"></i><div>저장</div></a></li>
+				<li><a href="#"><i class="fas fa-flag"></i><div>신고</div></a></li>
+			</ul>
+			<div class="channel-area">
+				<a href="" class="channel">
+					<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+					<div class="channel-info">
+						<div class="channel-title">한땀한땀 SEW CODING</div>
+						<div class="channel-subscriber">구독자 123만명</div>
+					</div>
+				</a>
+				<button class="channel-subscribe">구독</button>
+			</div>
+			<!-- 영상 상세정보 -->
+			<div class="video-contents">
+				<div>최초 공개: 2021. 6. 7.</div>
 				<div>
-					<span class="comments-title">댓글</span>
-					<span class="comments-num"> • 999개</span>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+					 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					 Nisl tincidunt eget nullam non. Quis hendrerit dolor magna eget est
+					 lorem ipsum dolor sit. Volutpat odio facilisis mauris sit amet massa.
+					 Commodo odio aenean sed adipiscing diam donec adipiscing tristique.
+					 Mi eget mauris pharetra et. Non tellus orci ac auctor augue.
+					 Elit at imperdiet dui accumsan sit. Ornare arcu dui vivamus arcu felis.
+					 Egestas integer eget aliquet nibh praesent. In hac habitasse platea dictumst
+					 quisque sagittis purus. Pulvinar elementum integer enim neque volutpat ac.</br>
+					Senectus et netus et malesuada. Nunc pulvinar sapien et ligula ullamcorper malesuada proin.
+					 Neque convallis a cras semper auctor. Libero id faucibus nisl tincidunt eget. Leo a diam
+					 sollicitudin tempor id. A lacus vestibulum sed arcu non odio euismod lacinia. In tellus
+					 integer feugiat scelerisque. Feugiat in fermentum posuere urna nec tincidunt praesent.
+					 Porttitor rhoncus dolor purus non enim praesent elementum facilisis. Nisi scelerisque eu
+					 ultrices vitae auctor eu augue ut lectus. Ipsum faucibus vitae aliquet nec ullamcorper sit
+					 amet risus. Et malesuada fames ac turpis egestas sed. Sit amet nisl suscipit adipiscing bibendum
+					 est ultricies. Arcu ac tortor dignissim convallis aenean et tortor at. Pretium viverra
+					 suspendisse potenti nullam ac tortor vitae purus. Eros donec ac odio tempor orci dapibus
+					 ultrices. Elementum nibh tellus molestie nunc. Et magnis dis parturient montes nascetur.
+					 Est placerat in egestas erat imperdiet. Consequat interdum varius sit amet mattis vulputate enim.
 				</div>
-				<i class="fas fa-expand-alt"></i>
-			</a>
-		</div>
-		<div class="comments-open">
-			<div class="comments-header">
-				<span>댓글</span>
-				<a href="#" class="close-comments">&times;</a>
 			</div>
-			<div class="comments-add">
-				<div class="comments-input">
-					<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
-					<div class="simple-textarea">
-						공개 댓글 추가…
+		</section>
+		<!-- 댓글 -->
+		<section class="comment-section">
+			<div class="comments-close">
+				<a href="#" class="open-comments">
+					<div>
+						<span class="comments-title">댓글</span>
+						<span class="comments-num"> • 999개</span>
 					</div>
-					<textarea class="textarea" placeholder="공개 댓글 추가…" rows="4"></textarea>
-				</div>
-				<div class="comments-buttons">
-					<button type="reset">취소</button>
-					<button class="ok" type="submit">댓글</button>
-				</div>
+					<i class="fas fa-expand-alt"></i>
+				</a>
 			</div>
-			<div class="comments-list">
-				<div class="comments-item">
-					<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
-					<div class="comment">
-						<div id="channel-title">채널 이름</div>
-						<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
-						<div id="comment-info"> 30분 전 • 
-							<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
-							<a href="#"><i class="fas fa-thumbs-down"></i></a>
-							<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
+			<div class="comments-open">
+				<div class="comments-header">
+					<span>댓글</span>
+					<a href="#" class="close-comments">&times;</a>
+				</div>
+				<div class="comments-add">
+					<div class="comments-input">
+						<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+						<div class="simple-textarea">
+							공개 댓글 추가…
 						</div>
+						<textarea class="textarea" placeholder="공개 댓글 추가…" rows="4"></textarea>
 					</div>
-					<a href=""><i class="fas fa-ellipsis-v"></i></a>
+					<div class="comments-buttons">
+						<button type="reset">취소</button>
+						<button class="ok" type="submit">댓글</button>
+					</div>
 				</div>
-				<button class="open-reply">답글 더보기</button>
+				<div class="comments-list">
+					<div class="comments-item">
+						<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+						<div class="comment">
+							<div id="channel-title">채널 이름</div>
+							<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
+							<div id="comment-info"> 30분 전 • 
+								<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
+								<a href="#"><i class="fas fa-thumbs-down"></i></a>
+								<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
+							</div>
+						</div>
+						<a href="#"><i class="fas fa-ellipsis-v"></i></a>
+					</div>
+					<button class="open-reply">답글 더보기</button>
+				</div>
 			</div>
-		</div>
-		<div class="next-video">
+		</section>
+		<section class="next-video-section">
 			<h3>다음 동영상</h3>
-			<section class="video-item">
-				<div class="video-thumbnail"><img src="src/thumbnail1.jpg" alt="영상 보기"></div>
-				<div class="video-meta">
-					<div class="video-info">
+			<section class="next-video-item">
+				<div class="next-video-thumbnail"><img src="src/thumbnail1.jpg" alt="영상 보기"></div>
+				<div class="next-video-meta">
+					<div class="next-video-info">
 						<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
 						<div class="title">
-							<div class="video-title">영상 제목</div>
+							<div class="next-video-title">영상 제목</div>
 							<div class="channel-title">채널 이름 • 조회수 12만회</div>
 						</div>
 					</div>
 					<a href="#"><i class="fas fa-ellipsis-v"></i></a>
 				</div>
 			</section>
-		</div>
+		</section>
 	</body>
 </html>
