--- a/clone-coding/youtube/YouTube.html
+++ b/clone-coding/youtube/YouTube.html
@@ -10,6 +10,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Noto+Sans+KR&display=swap" rel="stylesheet">
 		<script src="YouTube.js" defer></script>
+		<script src="button_click.js" defer></script>
 		<title>YouTube</title>
 	</head>
 	<body>
@@ -28,9 +29,11 @@
 		<!-- 영상 정보 -->
 		<section class="info-section">
 			<div class="title-area">
-				<div class="hashtag">
-					<a href="#">#해시태그</a>
-				</div>
+				<ul class="hashtag">
+					<li><a href="#">#해시태그</a></li>
+					<li><a href="#">#모바일유튜브</a></li>
+					<li><a href="#">#클론코딩</a></li>
+				</ul>
 				<a href="#" class="open-title">
 					<div>
 						<div class="title">영상 제목</div>
@@ -41,8 +44,8 @@
 				</a>
 			</div>
 			<ul class="video-buttons">
-				<li><a href="#"><i class="fas fa-thumbs-up"></i><div>1.2천</div></a></li>
-				<li><a href="#"><i class="fas fa-thumbs-down"></i><div>123</div></a></li>
+				<li><a href="#" class="video-up"><i class="fas fa-thumbs-up"></i><div>1.2천</div></a></li>
+				<li><a href="#" class="video-down"><i class="fas fa-thumbs-down"></i><div>123</div></a></li>
 				<li><a href="#"><i class="fas fa-share"></i><div>공유</div></a></li>
 				<li><a href="#"><i class="fas fa-plus-square"></i><div>저장</div></a></li>
 				<li><a href="#"><i class="fas fa-flag"></i><div>신고</div></a></li>
@@ -100,52 +103,125 @@
 					<span>댓글</span>
 					<a href="#" class="close-comments">&times;</a>
 				</div>
-				<div class="comments-add">
-					<div class="comments-input">
-						<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
-						<div class="simple-textarea">
-							공개 댓글 추가…
-						</div>
-						<textarea class="textarea" placeholder="공개 댓글 추가…" rows="4"></textarea>
-					</div>
-					<div class="comments-buttons">
-						<button type="reset">취소</button>
-						<button class="ok" type="submit">댓글</button>
-					</div>
-				</div>
-				<div class="comments-list">
-					<div class="comments-item">
-						<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
-						<div class="comment">
-							<div id="channel-title">채널 이름</div>
-							<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
-							<div id="comment-info"> 30분 전 • 
-								<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
-								<a href="#"><i class="fas fa-thumbs-down"></i></a>
-								<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
+				<div class="comments-body">
+					<div class="comments-add">
+						<div class="comments-input">
+							<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="simple-textarea">
+								공개 댓글 추가…
 							</div>
+							<textarea class="textarea" placeholder="공개 댓글 추가…" rows="4"></textarea>
 						</div>
-						<a href="#"><i class="fas fa-ellipsis-v"></i></a>
+						<div class="comments-buttons">
+							<button type="reset">취소</button>
+							<button class="ok" type="submit">댓글</button>
+						</div>
 					</div>
-					<button class="open-reply">답글 더보기</button>
+					<ul class="comments-list">
+						<li class="comments-item">
+							<div class="comment">
+								<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+								<div class="comment-text">
+									<div id="channel-title">채널 이름</div>
+									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
+									<div id="comment-info"> 30분 전 • 
+										<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
+										<a href="#"><i class="fas fa-thumbs-down"></i></a>
+										<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
+									</div>
+								</div>
+								<a href="#"><i class="fas fa-ellipsis-v"></i></a>
+							</div>
+							<button class="open-reply">답글 더보기</button>
+						</li>
+						<li class="comments-item">
+							<div class="comment">
+								<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+								<div class="comment-text">
+									<div id="channel-title">채널 이름</div>
+									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
+									<div id="comment-info"> 30분 전 • 
+										<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
+										<a href="#"><i class="fas fa-thumbs-down"></i></a>
+										<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
+									</div>
+								</div>
+								<a href="#"><i class="fas fa-ellipsis-v"></i></a>
+							</div>
+							<button class="open-reply">답글 더보기</button>
+						</li>
+						<li class="comments-item">
+							<div class="comment">
+								<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+								<div class="comment-text">
+									<div id="channel-title">채널 이름</div>
+									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
+									<div id="comment-info"> 30분 전 • 
+										<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
+										<a href="#"><i class="fas fa-thumbs-down"></i></a>
+										<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
+									</div>
+								</div>
+								<a href="#"><i class="fas fa-ellipsis-v"></i></a>
+							</div>
+							<button class="open-reply">답글 더보기</button>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</section>
 		<section class="next-video-section">
 			<h3>다음 동영상</h3>
-			<section class="next-video-item">
-				<div class="next-video-thumbnail"><img src="src/thumbnail1.jpg" alt="영상 보기"></div>
-				<div class="next-video-meta">
-					<div class="next-video-info">
-						<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
-						<div class="title">
-							<div class="next-video-title">영상 제목</div>
-							<div class="channel-title">채널 이름 • 조회수 12만회</div>
+			<ul class="next-video-list">
+				<li class="next-video-item">
+					<div class="next-video-thumbnail"><img src="src/thumbnail1.jpg" alt="영상 보기"></div>
+					<div class="next-video-meta">
+						<div class="next-video-info">
+							<div class="next-video-channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="title">
+								<div class="next-video-title">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+									sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</div>
+								<div class="channel-title">채널 이름 • 조회수 12만회</div>
+							</div>
+							<a href="#"><i class="fas fa-ellipsis-v"></i></a>
 						</div>
 					</div>
-					<a href="#"><i class="fas fa-ellipsis-v"></i></a>
-				</div>
-			</section>
+				</li>
+				<li class="next-video-item">
+					<div class="next-video-thumbnail"><img src="src/thumbnail2.jpg" alt="영상 보기"></div>
+					<div class="next-video-meta">
+						<div class="next-video-info">
+							<div class="next-video-channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="title">
+								<div class="next-video-title">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+									sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</div>
+								<div class="channel-title">채널 이름 • 조회수 12만회</div>
+							</div>
+							<a href="#"><i class="fas fa-ellipsis-v"></i></a>
+						</div>
+					</div>
+				</li>
+				<li class="next-video-item">
+					<div class="next-video-thumbnail"><img src="src/thumbnail3.jpg" alt="영상 보기"></div>
+					<div class="next-video-meta">
+						<div class="next-video-info">
+							<div class="next-video-channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="title">
+								<div class="next-video-title">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+									sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</div>
+								<div class="channel-title">채널 이름 • 조회수 12만회</div>
+							</div>
+							<a href="#"><i class="fas fa-ellipsis-v"></i></a>
+						</div>
+					</div>
+				</li>
+			</ul>
 		</section>
 	</body>
 </html>
