--- a/clone-coding/youtube/YouTube.html
+++ b/clone-coding/youtube/YouTube.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width:device-width">
 		<link rel="stylesheet" href="YouTube.css">
+		<link rel="stylesheet" href="video-controls.css">
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css' integrity='sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==' crossorigin='anonymous'/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -24,8 +25,29 @@
 		</header>
 		<!-- 영상 -->
 		<section class=video-section>
-			<iframe src="https://www.youtube.com/embed/67stn7Pu7s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<!-- <iframe src="https://www.youtube.com/embed/67stn7Pu7s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+			<video controls width="250">
+				<source src="/media/cc0-videos/flower.webm"
+						type="video/webm">
+				<source src="/media/cc0-videos/flower.mp4"
+						type="video/mp4">
+				지원하지 않는 브라우저입니다.
+			</video>
+			<div id="video-controls" class="controls" data-state="visible">
+				<button id="playpause" type="button" data-state="play">Play/Pause</button>
+				<button id="stop" type="button" data-state="stop">Stop</button>
+				<div class="progress">
+				   <progress id="progress" value="0" min="0">
+					  <span id="progress-bar"></span>
+				   </progress>
+				</div>
+				<button id="mute" type="button" data-state="mute">Mute/Unmute</button>
+				<button id="volinc" type="button" data-state="volup">Vol+</button>
+				<button id="voldec" type="button" data-state="voldown">Vol-</button>
+				<button id="fs" type="button" data-state="go-fullscreen">Fullscreen</button>
+			 </div>
 		</section>
+
 		<!-- 영상 정보 -->
 		<section class="info-section">
 			<div class="title-area">
