--- a/clone-coding/youtube/YouTube.html
+++ b/clone-coding/youtube/YouTube.html
@@ -26,11 +26,8 @@
 		<!-- 영상 -->
 		<section class=video-section>
 			<!-- <iframe src="https://www.youtube.com/embed/67stn7Pu7s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-			<video controls width="250">
-				<source src="/media/cc0-videos/flower.webm"
-						type="video/webm">
-				<source src="/media/cc0-videos/flower.mp4"
-						type="video/mp4">
+			<video controls>
+				<source src="src/video.mp4" type="video/mp4">
 				지원하지 않는 브라우저입니다.
 			</video>
 			<div id="video-controls" class="controls" data-state="visible">
