--- a/clone-coding/youtube/YouTube.html
+++ b/clone-coding/youtube/YouTube.html
@@ -15,7 +15,7 @@
 		<script src="video-controls.js" defer></script>
 		<title>YouTube</title>
 	</head>
-	<body>
+	<body data-fullscreen="false">
 		<!-- 헤더 -->
 		<header>
 			<a href=""><img src="src/yt_logo_rgb_dark.png" alt="YouTube 홈" class="logo"></a>
