--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -27,10 +27,12 @@
 		<!-- 영상 -->
 		<section class=video-section>
 			<!-- <iframe src="https://www.youtube.com/embed/67stn7Pu7s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-			<video id="video" autoplay>
-				<source src="src/video.mp4" type="video/mp4">
-				지원하지 않는 브라우저입니다.
-			</video>
+			<div class="video-screen">
+				<video id="video" autoplay muted>
+					<source src="src/video.mp4" type="video/mp4">
+					지원하지 않는 브라우저입니다.
+				</video>
+			</div>
 			<div id="video-controls" class="controls" data-state="hidden">
 				<div class="controls-top">
 					<button id="backward"><i class="fas fa-cog"></i></button>
@@ -45,13 +47,22 @@
 				</div>
 				<div class="controls-bottom">
 					<span id="playtime"><span id="currentT"></span><span id="duration"></span></span>
-					<button id="fs" type="button" data-state="go-fullscreen"><i class="fas fa-expand"></i></button>
+					<button id="fs" type="button" data-state="unfullscreen">
+						<i class="fas fa-expand" id="expand"></i><i class="fas fa-compress" id="compress"></i>
+					</button>
 				</div>
-				<div class="progress">
-					<div id="progress-bar-line">
-						<div id="progress-bar">
-							<div id="playhead"><div id="playhead-dot"></div></div>
-						</div>
+			</div>
+			<div class="progress" data-state="hidden">
+				<div id="progress-bar-line">
+					<div id="progress-bar">
+						<div id="playhead"><div id="playhead-dot"></div></div>
+					</div>
+				</div>
+				<div class="player-storyboard" aria-hidden="true">
+					<img id="player-storyboard-image" alt="preview-image">
+					<div class="player-storyboard-metadata">
+						<div id="player-storyboard-title"></div>
+						<div id="player-storyboard-time"></div>
 					</div>
 				</div>
 			</div>
