wide screen work

--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -132,17 +132,19 @@
 			</div>
 		</section>
 
-		<!-- 댓글 -->
-		<section class="comment-section">
-			<div class="comments-close">
-				<a href="#" class="open-comments">
-					<div>
-						<span class="comments-title">댓글</span>
-						<span class="comments-num"> • 999개</span>
-					</div>
-					<i class="fas fa-expand-alt"></i>
-				</a>
-			</div>
+		<!-- 닫힌 댓글 -->
+		<section class="comments-close">
+			<a href="#" class="open-comments">
+				<div>
+					<span class="comments-title">댓글</span>
+					<span class="comments-num"> • 999개</span>
+				</div>
+				<i class="fas fa-expand-alt"></i>
+			</a>
+		</section>
+
+		<!-- 열린 댓글 -->
+		<aside class="comment-section">
 			<div class="comments-open">
 				<div class="comments-header">
 					<span>댓글</span>
@@ -214,7 +216,7 @@
 					</ul>
 				</div>
 			</div>
-		</section>
+		</aside>
 
 		<!-- 사이드바 -->
 		<aside class="next-video-section">
