add alert unmute

--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -27,13 +27,16 @@
 
 		<!-- 영상 -->
 		<section class=video-section>
-			<!-- <iframe src="https://www.youtube.com/embed/67stn7Pu7s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 			<div class="video">
 				<video id="video" autoplay muted>
 					<source src="src/video.mp4" type="video/mp4">
 					지원하지 않는 브라우저입니다.
 				</video>
 				<div id="video-screen" data-state="hidden"></div>
+			</div>
+			<div id="alert-unmute" data-state="full">
+				<i class="fas fa-volume-mute"></i>
+				<span>탭하여 음소거 해제</span>
 			</div>
 			<div id="video-controls" class="controls" data-state="hidden">
 				<div class="controls-top">
@@ -96,9 +99,9 @@
 			</ul>
 			<div class="channel-area">
 				<a href="" class="channel">
-					<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+					<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 					<div class="channel-info">
-						<div class="channel-title">한땀한땀 SEW CODING</div>
+						<div class="channel-title">SEW CODING</div>
 						<div class="channel-subscriber">구독자 123만명</div>
 					</div>
 				</a>
@@ -153,7 +156,7 @@
 				<div class="comments-body">
 					<div class="comments-add">
 						<div class="comments-input">
-							<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 							<div class="simple-textarea">
 								공개 댓글 추가…
 							</div>
@@ -167,7 +170,7 @@
 					<ul class="comments-list">
 						<li class="comments-item">
 							<div class="comment">
-								<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+								<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 								<div class="comment-text">
 									<div id="channel-title">채널 이름</div>
 									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
@@ -183,7 +186,7 @@
 						</li>
 						<li class="comments-item">
 							<div class="comment">
-								<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+								<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 								<div class="comment-text">
 									<div id="channel-title">채널 이름</div>
 									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
@@ -199,7 +202,7 @@
 						</li>
 						<li class="comments-item">
 							<div class="comment">
-								<div class="channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+								<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 								<div class="comment-text">
 									<div id="channel-title">채널 이름</div>
 									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
@@ -226,7 +229,7 @@
 					<div class="next-video-thumbnail"><img src="src/thumbnail1.jpg" alt="영상 보기"></div>
 					<div class="next-video-meta">
 						<div class="next-video-info">
-							<div class="next-video-channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="next-video-channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 							<div class="title">
 								<div class="next-video-title">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -242,7 +245,7 @@
 					<div class="next-video-thumbnail"><img src="src/thumbnail2.jpg" alt="영상 보기"></div>
 					<div class="next-video-meta">
 						<div class="next-video-info">
-							<div class="next-video-channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="next-video-channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 							<div class="title">
 								<div class="next-video-title">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -258,7 +261,7 @@
 					<div class="next-video-thumbnail"><img src="src/thumbnail3.jpg" alt="영상 보기"></div>
 					<div class="next-video-meta">
 						<div class="next-video-info">
-							<div class="next-video-channel-img"><img src="src/profile1.jpg" alt="채널 이동"></div>
+							<div class="next-video-channel-img"><img src="src/profile.png" alt="채널 이동"></div>
 							<div class="title">
 								<div class="next-video-title">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
