feat showAd, getNewAd. need to fix order of controls&ad

--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -34,12 +34,6 @@
 				</video>
 				<div id="video-screen" data-state="hidden"></div>
 			</div>
-			<!-- 광고 -->
-			<div class="ad-in-video">
-				<div class="ad1" data-state="hidden"><button>&times;</button></div>
-				<div class="ad2" data-state="hidden"><button>&times;</button></div>
-				<!-- <div class="ad3" data-state="hidden"><button>&times;</button></div> -->
-			</div>
 			<!-- 비디오 컨트롤 -->
 			<div id="alert-unmute" data-state="full">
 				<i class="fas fa-volume-mute"></i>
@@ -78,6 +72,8 @@
 					</div>
 				</div>
 			</div>
+			<!-- 광고 -->
+			<div class="ad-in-video"></div>
 		</section>
 
 		<!-- 영상 정보 -->
