--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -72,12 +72,16 @@
 					</div>
 				</div>
 			</div>
-			<!-- 광고 -->
-			<div class="ad-in-video"></div>
+			<!-- 광고
+			<div class="ad-in-video"></div> -->
 		</section>
 
 		<!-- 영상 정보 -->
 		<section class="info-section">
+			<!-- 텍스트 광고 -->
+			<div class="ad-under-video">
+				<img />
+			</div>
 			<div class="title-area">
 				<ul class="hashtag">
 					<li><a href="#">#해시태그</a></li>
