--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -13,6 +13,7 @@
 		<script src="YouTube.js" defer></script>
 		<script src="button_click.js" defer></script>
 		<script src="video-controls.js" defer></script>
+		<script src="prev-ad.js" defer></script>
 		<title>YouTube</title>
 	</head>
 	<body data-fullscreen="false">
@@ -29,10 +30,11 @@
 		<section class=video-section>
 			<div class="video">
 				<video id="video" autoplay muted>
-					<source src="src/video.mp4" type="video/mp4">
+					<source class="video-source" type="video/mp4">
 					지원하지 않는 브라우저입니다.
 				</video>
 				<div id="video-screen" data-state="hidden"></div>
+				<!-- <div class="ad-pre-video"></div> -->
 			</div>
 			<!-- 비디오 컨트롤 -->
 			<div id="alert-unmute" data-state="full">
@@ -78,9 +80,6 @@
 
 		<!-- 영상 정보 -->
 		<section class="info-section">
-			<!-- 텍스트 광고 -->
-			<div class="ad-under-video">
-			</div>
 			<div class="title-area">
 				<ul class="hashtag">
 					<li><a href="#">#해시태그</a></li>
